# CppTemplateProject

./: .gitignore  C++23种设计模式.md  CMakeLists.txt  README.md  设计模式(临时).md
cmake/: module.cmake
resources/config/: config.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/study/: CMakeLists.txt  main.cpp
src/app/test/: CMakeLists.txt  main.cpp  testwidget.cpp  testwidget.h
src/app/test2/: CMakeLists.txt  ddsclass.cpp  ddsclass.h  main.cpp
src/core/: CMakeLists.txt
src/core/common/: CircularQueue.h
src/core/lbase/: CMakeLists.txt  appconfig.cpp  appconfig.h  lddsbus.cpp  lddsbus.h  reflection.cpp  reflection.h
src/core/lddsbus/: CMakeLists.txt  dataTrans.cpp  dataTrans.hpp  ldds_global.h  lddsbus.cpp  lddsbus.h
src/core/luicommon/: ldialog.cpp  ldialog.h  lfiledialog.cpp  lfiledialog.h  lmainwindow.cpp  lmainwindow.h  lmessagebox.cpp  lmessagebox.h  ltitlebar.cpp  ltitlebar.h  lwidget.cpp  lwidget.h
src/core/pluginmanager/: pluginmanager.cpp
src/include/common/: ThreadPool.hpp
src/lib/: CMakeLists.txt
src/lib/appskeleton/: CMakeLists.txt  appskeleton.cpp  ipluginview.cpp  ipluginview.h
src/lib/communatemodule/: CMakeLists.txt  communatemodule.h
src/lib/lbase/: objectregister.cpp  objectregister.h
src/lib/leventbus/: CMakeLists.txt  levent.cpp  levent.h  leventbus.cpp  leventbus.h  leventbus_global.h
src/lib/llog/: CMakeLists.txt  llog.cpp  llog.h
src/lib/pluginmanager/: CMakeLists.txt  plugininterface.h  pluginmanager.cpp
src/plugin/: CMakeLists.txt
src/plugin/appskeletonplugin/: CMakeLists.txt  appskeleton.cpp  ipluginview.h  (+2 more)
(+10 files in other folders)
