add_subdirectory(appskeleton)
set_property(TARGET appskeleton PROPERTY FOLDER "lib")

add_subdirectory(communatemodule)
set_property(TARGET communatemodule PROPERTY FOLDER "lib")

add_subdirectory(leventbus)
set_property(TARGET leventbus PROPERTY FOLDER "lib")

add_subdirectory(llog)
set_property(TARGET llog PROPERTY FOLDER "lib")

add_subdirectory(pluginmanager)
set_property(TARGET pluginmanager PROPERTY FOLDER "lib")



